# state-pattern-py

./: .gitignore  README.md  pyproject.toml
examples/: semaphore.py
src/state_pattern/: __init__.py  state.py
tests/: test_argument_delegation.py  test_hooks.py  test_on_transition.py  test_serialization.py  test_state_pattern.py  test_terminal_state.py
